package com.kaizen.nightfolks.controller.utility;

public class Constants {
    public final static String BY_HOST = "BY_HOST";
}