@startuml

title __APP's Class Diagram__\n

  namespace com.kaizen.nightfolks {
    class com.kaizen.nightfolks.BuildConfig {
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.BTNetwork {
      class com.kaizen.nightfolks.controller.BTNetwork.AcceptThread {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.BTNetwork {
      class com.kaizen.nightfolks.controller.BTNetwork.BTConnectionService {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.BTNetwork {
      class com.kaizen.nightfolks.controller.BTNetwork.ConnectThread {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.BTNetwork {
      interface com.kaizen.nightfolks.controller.BTNetwork.IParticipant {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.BTNetwork {
      class com.kaizen.nightfolks.controller.BTNetwork.Participant {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.music.adapters {
      class com.kaizen.nightfolks.controller.music.adapters.SongsAdapter {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.partyManager {
      class com.kaizen.nightfolks.controller.partyManager.PartyFactory {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.partyManager {
      class com.kaizen.nightfolks.controller.partyManager.PartyService {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.partyManager {
      namespace asyncTasks {
        class com.kaizen.nightfolks.controller.partyManager.asyncTasks.CreatePartyAsyncTask {
        }
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.partyManager {
      namespace asyncTasks {
        class com.kaizen.nightfolks.controller.partyManager.asyncTasks.GetPartyListAsyncTask {
        }
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.partyManager {
      namespace asyncTasks {
        abstract class com.kaizen.nightfolks.controller.partyManager.asyncTasks.PartyAsyncTask {
        }
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.utility {
      class com.kaizen.nightfolks.controller.utility.AppData {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.utility {
      class com.kaizen.nightfolks.controller.utility.Constants {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.utility {
      class com.kaizen.nightfolks.controller.utility.DeviceIdentifier {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.votingSystem {
      interface com.kaizen.nightfolks.controller.votingSystem.IVoteManager {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.votingSystem {
      interface com.kaizen.nightfolks.controller.votingSystem.IVoteObject {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.votingSystem {
      interface com.kaizen.nightfolks.controller.votingSystem.SortPolicy {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.votingSystem {
      class com.kaizen.nightfolks.controller.votingSystem.VoteManager {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace controller.votingSystem {
      namespace voteObjects {
        class com.kaizen.nightfolks.controller.votingSystem.voteObjects.VoteInteger {
        }
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace model {
      namespace converters {
        class com.kaizen.nightfolks.model.converters.DateConverter {
        }
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace model {
      namespace database {
        interface com.kaizen.nightfolks.model.database.PartyDao {
        }
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace model {
      namespace database {
        class com.kaizen.nightfolks.model.database.PartyDao_Impl {
        }
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace model {
      namespace database {
        abstract class com.kaizen.nightfolks.model.database.PartyDatabase {
        }
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace model {
      namespace database {
        class com.kaizen.nightfolks.model.database.PartyDatabase_Impl {
        }
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace model {
      namespace entities {
        class com.kaizen.nightfolks.model.entities.Party {
        }
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace model {
      namespace entities {
        class com.kaizen.nightfolks.model.entities.Playlist {
        }
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace model {
      namespace entities {
        class com.kaizen.nightfolks.model.entities.Song {
        }
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace view {
      class com.kaizen.nightfolks.view.DJHistoryFragment {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace view {
      class com.kaizen.nightfolks.view.DJNewPartyActivity {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace view {
      class com.kaizen.nightfolks.view.HistoryPopUp {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace view {
      class com.kaizen.nightfolks.view.MainActivity {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace view {
      class com.kaizen.nightfolks.view.PartyActivity {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace view {
      class com.kaizen.nightfolks.view.PlaylistFragment {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace view {
      class com.kaizen.nightfolks.view.ScanForPartiesActivity {
      }
    }
  }
  

  namespace com.kaizen.nightfolks {
    namespace view {
      namespace helpers {
        class com.kaizen.nightfolks.view.helpers.Dialogs {
        }
      }
    }
  }
  

  com.kaizen.nightfolks.controller.BTNetwork.BTConnectionService o-- com.kaizen.nightfolks.controller.BTNetwork.BTConnectionService.ConnectThread : mConnectThread
  com.kaizen.nightfolks.controller.BTNetwork.BTConnectionService o-- com.kaizen.nightfolks.controller.BTNetwork.BTConnectionService.ConnectedThread : mConnectedThread
  com.kaizen.nightfolks.controller.BTNetwork.BTConnectionService o-- com.kaizen.nightfolks.controller.BTNetwork.BTConnectionService.AcceptThread : mInsecureAcceptThread
  com.kaizen.nightfolks.controller.BTNetwork.Participant .up.|> com.kaizen.nightfolks.controller.BTNetwork.IParticipant
  com.kaizen.nightfolks.controller.BTNetwork.Participant o-- com.kaizen.nightfolks.controller.BTNetwork.BTConnectionService : btConnectionService
  com.kaizen.nightfolks.controller.music.adapters.SongsAdapter -up-|> androidx.recyclerview.widget.RecyclerView.Adapter
  com.kaizen.nightfolks.controller.partyManager.PartyService o-- com.kaizen.nightfolks.model.database.PartyDatabase : partyDB
  com.kaizen.nightfolks.controller.partyManager.asyncTasks.CreatePartyAsyncTask -up-|> com.kaizen.nightfolks.controller.partyManager.asyncTasks.PartyAsyncTask
  com.kaizen.nightfolks.controller.partyManager.asyncTasks.CreatePartyAsyncTask o-- com.kaizen.nightfolks.model.entities.Party : party
  com.kaizen.nightfolks.controller.partyManager.asyncTasks.GetPartyListAsyncTask -up-|> com.kaizen.nightfolks.controller.partyManager.asyncTasks.PartyAsyncTask
  com.kaizen.nightfolks.controller.partyManager.asyncTasks.PartyAsyncTask -up-|> android.os.AsyncTask
  com.kaizen.nightfolks.controller.partyManager.asyncTasks.PartyAsyncTask o-- com.kaizen.nightfolks.model.database.PartyDatabase : partyDB
  com.kaizen.nightfolks.controller.utility.AppData o-- com.kaizen.nightfolks.controller.BTNetwork.IParticipant : participant
  com.kaizen.nightfolks.controller.votingSystem.VoteManager .up.|> com.kaizen.nightfolks.controller.votingSystem.IVoteManager
  com.kaizen.nightfolks.controller.votingSystem.VoteManager o-- com.kaizen.nightfolks.controller.votingSystem.SortPolicy : sortPolicy
  com.kaizen.nightfolks.controller.votingSystem.voteObjects.VoteInteger .up.|> com.kaizen.nightfolks.controller.votingSystem.IVoteObject
  com.kaizen.nightfolks.model.database.PartyDao_Impl .up.|> com.kaizen.nightfolks.model.database.PartyDao
  com.kaizen.nightfolks.model.database.PartyDatabase -up-|> androidx.room.RoomDatabase
  com.kaizen.nightfolks.model.database.PartyDatabase_Impl -up-|> com.kaizen.nightfolks.model.database.PartyDatabase
  com.kaizen.nightfolks.model.database.PartyDatabase_Impl o-- com.kaizen.nightfolks.model.database.PartyDao : _partyDao
  com.kaizen.nightfolks.model.entities.Playlist .up.|> android.os.Parcelable
  com.kaizen.nightfolks.model.entities.Song .up.|> android.os.Parcelable
  com.kaizen.nightfolks.view.DJNewPartyActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.kaizen.nightfolks.view.DJNewPartyActivity o-- com.kaizen.nightfolks.controller.utility.AppData : appData
  com.kaizen.nightfolks.view.DJNewPartyActivity o-- com.kaizen.nightfolks.controller.BTNetwork.Participant : dj
  com.kaizen.nightfolks.view.DJNewPartyActivity o-- com.kaizen.nightfolks.databinding.DjNewPartyBinding : newPartyBinding
  com.kaizen.nightfolks.view.DJNewPartyActivity o-- com.kaizen.nightfolks.controller.partyManager.PartyService : partyService
  com.kaizen.nightfolks.view.HistoryPopUp -up-|> android.app.Activity
  com.kaizen.nightfolks.view.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.kaizen.nightfolks.view.PartyActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.kaizen.nightfolks.view.PartyActivity o-- com.kaizen.nightfolks.controller.BTNetwork.Participant : participant
  com.kaizen.nightfolks.view.PartyActivity o-- com.kaizen.nightfolks.databinding.PartyActivityBinding : partyActivityBinding
  com.kaizen.nightfolks.view.PlaylistFragment -up-|> androidx.fragment.app.Fragment
  com.kaizen.nightfolks.view.PlaylistFragment o-- com.kaizen.nightfolks.model.entities.Playlist : songs
  com.kaizen.nightfolks.view.ScanForPartiesActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.kaizen.nightfolks.view.ScanForPartiesActivity o-- com.kaizen.nightfolks.controller.BTNetwork.Participant : guru
  com.kaizen.nightfolks.view.ScanForPartiesActivity o-- com.kaizen.nightfolks.databinding.ScanForPartyActivityBinding : scanForPartyActivityBinding


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
